# C_assignments

Encryption/: CMakeLists.txt
Encryption/inc/: crypt.h
Encryption/src/: crypt.c  main.c
LeapYear/: CMakeLists.txt
LeapYear/inc/: leapyear.h
LeapYear/src/: leapyear.c  main.c
Matrix/: main.c
StudentRecords/: CMakeLists.txt
StudentRecords/inc/: studentRecord.h
StudentRecords/src/: main.c  studentRecord.c
Wordle/: CMakeLists.txt
Wordle/inc/: wordle.h
Wordle/src/: main.c  wordle.c
